--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "babel-core": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "*",
     "body-parser": "^1.18.3",
     "cli": "^1.0.1",
     "eslint": "^5.12.1",
@@ -32,7 +33,6 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-env": "^2.4.1",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "http": "0.0.0",
