--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
   },
   "homepage": "https://github.com/JerryG09/Politico#readme",
   "dependencies": {
+    "@babel/preset-env",
     "babel-core": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-env": "*",
     "body-parser": "^1.18.3",
     "cli": "^1.0.1",
     "eslint": "^5.12.1",
