--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,3 @@
 {
-  "presets": [
-    "env",
-    "react",
-    "es2015",
-    "stage-0"
-  ],
-  "plugins": [
-    "transform-class-properties",
-    "transform-decorators",
-    "transform-react-constant-elements",
-    "transform-react-inline-elements"
-  ]
+  "presets": ["@babel/preset-env"]
 }
