--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.23.0",
-    "babel-preset-env": "*",
+    "babel-preset-env": "1.7.0",
     "body-parser": "^1.18.3",
     "cli": "^1.0.1",
     "eslint": "^5.12.1",
