--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint": "^5.12.1",
     "http": "0.0.0",
     "joi": "^14.3.1",
-    "nyc": "^13.1.0"
+    "nyc": "^13.1.0",
     "nodemon": "^1.18.9"
   }
 }
