--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mocha": "^5.2.0",
+    "mocha": "^5.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
